# rust-fatfs-issue

./: Cargo.toml  README.md
src/: flash.rs  main.rs
