[package]
name = "fatfs-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false, features = ["lfn"] }
embedded-storage = "0.2.0"
log = { version = "0.4.14" }
libc-print = "0.1.17"